--- a/CustomerManagementSystem/appsettings.json
+++ b/CustomerManagementSystem/appsettings.json
@@ -19,7 +19,12 @@
         "ExpireMinutes": "60"
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=EMTECH-LAP-1060\\SQLEXPRESS;Database=CustomerManagementDB;Trusted_Connection=True;TrustServerCertificate=True;"
+        // "DefaultConnection": "Server=EMTECH-LAP-1060\\SQLEXPRESS;Database=CustomerManagementDB;User Id=cms_user;Password=Cms12345!;TrustServerCertificate=True;",
+
+         "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Database=CustomerManagementDB;Trusted_Connection=True;TrustServerCertificate=True;"
+        //"DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Database=CustomerManagementDB;User Id=cmsuser;Password=Asdf@123;TrustServerCertificate=True;",
+       // "DefaultConnection": "Server=localhost,1433;Database=CustomerManagementDB;User Id=cmsuser;Password=Asdf@123;TrustServerCertificate=True;"
     },
     "AllowedHosts": "*"
+
 }
